force-app/main/default/objects/Commission_Tracker__c/Commission_Tracker__c.object-meta.xml
<CustomObject>
    <label>Commission Tracker</label>
    <nameField>
        <label>Commission Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>