force-app/main/default/objects/Commission_Tracker__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commission Trackers</relationshipLabel>
    <relationshipName>Commission_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>