force-app/main/default/objects/Commission_Tracker__c/fields/AE_Accelerator__c.field-meta.xml
<CustomField>
    <fullName>AE_Accelerator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AE Accelerator</label>
    <type>Checkbox</type>
</CustomField>