force-app/main/default/objects/Commission_Tracker__c/fields/AE_Commissionable_Rate__c.field-meta.xml
<CustomField>
    <fullName>AE_Commissionable_Rate__c</fullName>
    <label>AE Commissionable Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>