force-app/main/default/objects/Commission_Tracker__c/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <label>Billing Frequency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>