force-app/main/default/objects/Commission_Tracker__c/fields/Building_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Building_Location_Name__c</fullName>
    <label>Building/Location Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>