force-app/main/default/objects/Commission_Tracker__c/fields/Channel_SA__c.field-meta.xml
<CustomField>
    <fullName>Channel_SA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel SA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commission_Trackers2</relationshipName>
    <type>Lookup</type>
</CustomField>