force-app/main/default/objects/Commission_Tracker__c/fields/Channel_SA_Commission__c.field-meta.xml
<CustomField>
    <fullName>Channel_SA_Commission__c</fullName>
    <label>Channel SA Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>