force-app/main/default/objects/Commission_Tracker__c/fields/Invoice_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Payment_Amount__c</fullName>
    <label>Invoice Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>