force-app/main/default/objects/Commission_Tracker__c/fields/Notes_for_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Calculation__c</fullName>
    <label>Notes for Calculation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>