force-app/main/default/objects/Commission_Tracker__c/fields/Number_of_Buildings_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Buildings_Locations__c</fullName>
    <label>Number of Buildings/Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>