force-app/main/default/objects/Commission_Tracker__c/fields/Number_of_Months__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Months__c</fullName>
    <label>Number of Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>