force-app/main/default/objects/Commission_Tracker__c/fields/Number_of_Users_or_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Users_or_Square_Footage__c</fullName>
    <label>Number of Users or Square Footage</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>