force-app/main/default/objects/Commission_Tracker__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commission_Trackers1</relationshipName>
    <type>Lookup</type>
</CustomField>