force-app/main/default/objects/Commission_Tracker__c/fields/SA__c.field-meta.xml
<CustomField>
    <fullName>SA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commission_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>