force-app/main/default/objects/Commission_Tracker__c/fields/SA_Accelerator__c.field-meta.xml
<CustomField>
    <fullName>SA_Accelerator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SA Accelerator</label>
    <type>Checkbox</type>
</CustomField>