force-app/main/default/objects/Commission_Tracker__c/fields/SA_Commissionable_Rate__c.field-meta.xml
<CustomField>
    <fullName>SA_Commissionable_Rate__c</fullName>
    <label>SA Commissionable Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>